# 3d-synclinal

./: .gitignore  3d-synclinal.hipnc  README.md  pyrightconfig.json
import-height-map/: pyproject.toml
import-height-map/import_height_map/: generate.py
