[tool.poetry]
name = "import-height-map"
version = "0.1.0"
description = ""
authors = ["Corentin REGAL <corentin@huggingface.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rasterio = "^1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
